fdo#54609: Exception while importing xlsx.

* Handle any exception thrown during document properties
  import. This is not so critical so as to stop the import.
  We anyways check for hasElements().
* Also lclGetRelatedStreams might throw IllegalArgumentException